# fast-api-lms

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  main.py  pyproject.toml
alembic/versions/: 74cb323127b1_.py  750bcb33f4e3_moving_is_active_to_user_table.py
api/: courses.py  users.py
db/: db_setup.py
db/models/: course.py  user.py
pydantic_schemas/: course.py  user.py
tests/: postgres_test.py
